# ddsim

./: .clang-tidy  .license-tools-config.json  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  UPGRADING.md  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md  SECURITY.md  SUPPORT.md  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: cd.yml  ci.yml  templating.yml
apps/: noise_aware.cpp  simple.cpp
bindings/: CMakeLists.txt  bindings.cpp
cmake/: ExternalDependencies.cmake
docs/: ai_usage.md  conf.py  contributing.md  development_guide.md  index.md  installation.md  primitives.md  quickstart.md  references.md  simulators.md  tooling.md
docs/simulators/: CircuitSimulator.md  HybridSchrodingerFeynman.md  NoiseAwareSimulator.md  SimulationPathFramework.md  UnitarySimulator.md
include/: CircuitSimulator.hpp  DeterministicNoiseSimulator.hpp  GroverSimulator.hpp  HybridSchrodingerFeynmanSimulator.hpp  PathSimulator.hpp  ShorFastSimulator.hpp  ShorSimulator.hpp  Simulator.hpp  StochasticNoiseSimulator.hpp  UnitarySimulator.hpp
python/mqt/ddsim/: __init__.py  deterministic_noise_simulator_backend.py  deterministicnoisesimulator.py  experiment_header.py  header.py  hybrid_qam_simulator_backend.py  hybrid_statevector_simulator_backend.py  hybridqasmsimulator.py  job.py  path_qasm_simulator_backend.py  path_statevector_simulator_backend.py  pathqasmsimulator.py  provider.py  pyddsim.pyi  qasm_simulator_backend.py  statevector_simulator_backend.py  stochastic_noise_simulator_backend.py  stochasticnoisesimulator.py  target.py  unitary_simulator_backend.py  unitarysimulator.py
python/mqt/ddsim/primitives/: __init__.py  estimator.py  sampler.py
scripts/: README.md  approximation.sh  hybrid_simulation.sh  primebases_timing_shor.sh
src/: CircuitSimulator.cpp  DeterministicNoiseSimulator.cpp  GroverSimulator.cpp  HybridSchrodingerFeynmanSimulator.cpp  PathSimulator.cpp  ShorFastSimulator.cpp  ShorSimulator.cpp  Simulator.cpp  StochasticNoiseSimulator.cpp  UnitarySimulator.cpp
src/mqt/ddsim/: deterministicnoisesimulator.py  header.py  hybridqasmsimulator.py  pathqasmsimulator.py  qasmsimulator.py  stochasticnoisesimulator.py
src/mqt/ddsim/primitives/: estimator.py  sampler.py
test/: test_circuit_sim.cpp  test_det_noise_sim.cpp  test_fast_shor_sim.cpp  test_grover_sim.cpp  test_hybridsim.cpp  test_path_sim.cpp  test_shor_sim.cpp  test_stoch_noise_sim.cpp  test_unitary_sim.cpp
test/python/: test_provider.py  test_target.py
test/python/hybrid_simulator/: test_hybrid_qasm_simulator.py  test_hybrid_standalone_simulator.py  test_hybrid_statevector_simulator.py
test/python/noise_aware_simulator/: test_deterministic_noise_simulator.py  test_stochastic_noise_simulator.py
test/python/path_simulator/: test_path_qasm_simulator.py  test_path_standalone_simulator.py  test_path_statevector_simulator.py
test/python/primitives/: test_estimator.py  test_sampler.py
test/python/simulator/: grover.py  test_multi_registers_convention.py  test_qasm_simulator.py  test_standalone_simulator.py  test_statevector_simulator.py
test/python/taskbasedsimulator/: test_path_sim_qasm_simulator.py  test_path_sim_statevector_simulator.py
test/python/unitary_simulator/: test_standalone_unitary_simulator.py  test_unitary_simulator.py
