# Copyright (c) 2023 - 2026 Chair for Design Automation, TUM
# Copyright (c) 2025 - 2026 Munich Quantum Software Company GmbH
# All rights reserved.
#
# SPDX-License-Identifier: MIT
#
# Licensed under the MIT License

[build-system]
requires = [
  "nanobind~=2.11.0",
  "scikit-build-core>=0.11.6",
  "setuptools-scm>=9.2.2",
  "mqt.core~=3.4.1",
]
build-backend = "scikit_build_core.build"

[project]
name = "mqt.ddsim"
description = "A quantum simulator based on decision diagrams written in C++"
readme = "README.md"
authors = [
    { name = "Lukas Burgholzer", email = "lukas.burgholzer@tum.de" },
    { name = "Stefan Hillmich", email = "stefan.hillmich@scch.at" },
]
keywords = ["MQT", "quantum-computing", "design-automation", "quantum-circuit-sim", "simulation"]
license = "MIT"
license-files = ["LICENSE.md"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "mqt.core[qiskit]~=3.4.1",
    "qiskit>=1.1",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/munich-quantum-toolkit/ddsim"
Documentation = "https://mqt.readthedocs.io/projects/ddsim"
Issues = "https://github.com/munich-quantum-toolkit/ddsim/issues"
Discussions = "https://github.com/munich-quantum-toolkit/ddsim/discussions"


[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"

# Set the wheel install directory
wheel.install-dir = "mqt/ddsim"

# Explicitly set the package directory
wheel.packages = ["python/mqt"]

# Enable Stable ABI builds for CPython 3.12+
wheel.py-api = "cp312"

# Set required Ninja version
ninja.version = ">=1.10"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}/{build_type}"

# Only build the Python bindings target
build.targets = ["mqt-ddsim-bindings"]

# Only install the Python package component
install.components = ["mqt-ddsim_Python"]

metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["python/mqt/ddsim/_version.py"]
sdist.exclude = [
    "**/.github",
    "**/doc",
    "**/docs",
    "**/meta",
    "**/plots",
    "**/test",
    "**/tests",
]

[tool.scikit-build.cmake.define]
BUILD_MQT_DDSIM_TESTS = "OFF"
BUILD_MQT_DDSIM_BINDINGS = "ON"
BUILD_MQT_DDSIM_CLI = "OFF"
ENABLE_IPO = "ON"

[[tool.scikit-build.overrides]]
if.python-version = ">=3.13"
if.abi-flags = "t"
if.platform-system = "win32"
inherit.cmake.define = "append"
cmake.define.DISABLE_GIL = "1"


[tool.check-sdist]
sdist-only = ["python/mqt/ddsim/_version.py"]
git-only = [
    "docs/*",
    "extern/*",
    "test/*",
    ".idea/*",
]


[tool.setuptools_scm]
write_to = "python/mqt/ddsim/_version.py"


[tool.pytest]
minversion = "9.0"
testpaths = ["test/python"]
strict = true
addopts = [
  "-ra",
  "--showlocals",
  "--numprocesses=auto", # Automatically use all available CPU cores for parallel testing
]
log_level = "INFO"
filterwarnings = [
  "error",
  'ignore:.*datetime\.datetime\.utcfromtimestamp.*:DeprecationWarning:',
  # Qiskit 1.3 deprecations
  'ignore:.*``qiskit.circuit.library.standard_gates.x.*`` is pending deprecation as of qiskit 1.3.*:PendingDeprecationWarning:',
  'ignore:.*``qiskit.circuit.library.n_local.*`` is pending deprecation as of qiskit 1.3.*:PendingDeprecationWarning:',
  # Qiskit 2.1 deprecations
  'ignore:.*``qiskit.circuit.library.n_local.*`` is deprecated as of Qiskit 2.1.*:DeprecationWarning:',
  'ignore:.*``qiskit.circuit.library.blueprintcircuit.BlueprintCircuit`` is deprecated as of Qiskit 2.1',
]


[tool.coverage]
run.source = ["mqt.ddsim"]
report.exclude_also = [
  '\.\.\.',
  'if TYPE_CHECKING:',
]
run.disable_warnings = [
  "no-sysmon",
]


[tool.ty.terminal]
# Error if ty emits any warning-level diagnostics.
error-on-warning = true

[tool.ty.src]
exclude = [
    "docs/**",
]


[tool.ruff]
line-length = 120
namespace-packages = ["mqt"]
preview = true
fix = true
unsafe-fixes = true
show-fixes = true
src = ["python"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
    "A",           # flake8-builtins
    "ANN",         # flake8-annotations
    "ARG",         # flake8-unused-arguments
    "ASYNC",       # flake8-async
    "B",           # flake8-bugbear
    "C4",          # flake8-comprehensions
    "D",           # pydocstyle
    "EM",          # flake8-errmsg
    "EXE",         # flake8-executable
    "FA",          # flake8-future-annotations
    "FLY",         # flynt
    "FURB",        # refurb
    "I",           # isort
    "ICN",         # flake8-import-conventions
    "ISC",         # flake8-implicit-str-concat
    "LOG",         # flake8-logging-format
    "N",           # flake8-naming
    "NPY",         # numpy
    "PERF",        # perflint
    "PGH",         # pygrep-hooks
    "PIE",         # flake8-pie
    "PL",          # pylint
    "PT",          # flake8-pytest-style
    "PTH",         # flake8-use-pathlib
    "PYI",         # flake8-pyi
    "Q",           # flake8-quotes
    "RET",         # flake8-return
    "RSE",         # flake8-raise
    "RUF",         # Ruff-specific
    "S",           # flake8-bandit
    "SLF",         # flake8-self
    "SLOT",        # flake8-slots
    "SIM",         # flake8-simplify
    "T20",         # flake8-print
    "TC",          # flake8-type-checking
    "TID",         # flake8-tidy-imports
    "TRY",         # tryceratops
    "UP",          # pyupgrade
    "YTT",         # flake8-2020
]
ignore = [
    "PLR09",   # Too many <...>
    "PLR2004", # Magic value used in comparison
    "S101",    # Use of assert detected
    "S404",    # `subprocess` module is possibly insecure
]
future-annotations = true

[tool.ruff.lint.isort]
known-first-party = ["mqt.ddsim"]

[tool.ruff.lint.per-file-ignores]
"test/python/**" = ["T20", "ANN", "D10"]
"docs/**" = ["T20"]
"noxfile.py" = ["T20", "TID251"]
"*.pyi" = ["D418", "E501", "PYI021"]
"*.ipynb" = [
    "D",    # pydocstyle
    "E402", # Allow imports to appear anywhere in Jupyter notebooks
    "I002", # Allow missing `from __future__ import annotations` import
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.typos]
default.extend-ignore-re = [
  '"id": ".*",',
  "(?Rm)^.*(#|//)\\s*spellchecker:disable-line$",  # ignore line
  "(?s)(#|//)\\s*spellchecker:off.*?\\n\\s*(#|//)\\s*spellchecker:on" # ignore block
]
default.extend-ignore-identifiers-re = [
  "BasicAer",
  "qiskit_aer",
  "AerSimulator",
]
[tool.typos.default.extend-words]
wille = "wille"
mone = "mone"
anc = "anc"
optin = "optin"


[tool.repo-review]
ignore = [
  "GH200", # We use Renovate instead of Dependabot
  "MY100", # We use ty instead of mypy
  "PC140", # We use ty instead of mypy
  "PC160", # We use a mirror of crate-ci/typos
  "PC170", # We do not use rST files anymore
]


[tool.cibuildwheel]
build = "cp3*"
skip = ["*-musllinux_*", "cp313t-*"]
archs = "auto64"
test-command = "python -c \"from mqt import ddsim\""
build-frontend = "build[uv]"
enable = ["cpython-freethreading"]
test-skip = [
    "cp3??t-*", # no freethreading qiskit wheels
    "cp*-win_arm64", # no numpy, qiskit, ... wheels
]

# The mqt-core shared libraries are provided by the mqt-core Python package.
# They should not be vendorized into the mqt-qcec wheel. This requires
# excluding the shared libraries from the repair process.

[tool.cibuildwheel.linux]
environment = { DEPLOY = "ON" }
# The SOVERSION needs to be updated when the shared libraries are updated.
repair-wheel-command = """auditwheel repair -w {dest_dir} {wheel} \
--exclude libmqt-core-ir.so.3.4 \
--exclude libmqt-core-qasm.so.3.4 \
--exclude libmqt-core-circuit-optimizer.so.3.4 \
--exclude libmqt-core-dd.so.3.4"""

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel} --ignore-missing-dependencies"

[tool.cibuildwheel.windows]
before-build = "uv pip install delvewheel>=1.11.2"
repair-wheel-command = """delvewheel repair -w {dest_dir} {wheel} --namespace-pkg mqt \
--exclude mqt-core-ir.dll \
--exclude mqt-core-qasm.dll \
--exclude mqt-core-circuit-optimizer.dll \
--exclude mqt-core-dd.dll"""
environment = { CMAKE_ARGS = "-T ClangCL" }

[[tool.cibuildwheel.overrides]]
select = "cp312-*"
inherit.repair-wheel-command = "append"
repair-wheel-command = "uvx abi3audit --strict --report {wheel}"


[tool.uv]
required-version = ">=0.5.20"
cache-keys = [
  { file = "pyproject.toml" },
  { git = { commit = true, tags = true } },
  { file = "bindings/**/*.cpp"},
]

[tool.uv.sources]
mqt-ddsim = { workspace = true }


[dependency-groups]
build = [
  "nanobind~=2.11.0",
  "scikit-build-core>=0.11.6",
  "setuptools-scm>=9.2.2",
  "mqt.core~=3.4.1",
]
docs = [
  "breathe>=4.36.0",
  "furo>=2025.09.25",
  "graphviz>=0.21.0",
  "myst-nb>=1.3.0",
  "setuptools-scm>=9.2.2",
  "sphinx>=8.1.3",
  "sphinx>=8.2.3; python_version >= '3.11'",
  "sphinx-autoapi>=3.6.0",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.6.1",
  "sphinxcontrib-bibtex>=2.6.5",
  "sphinxcontrib-svg2pdfconverter>=1.3.0",
  "sphinxext-opengraph>=0.13.0",
  "qiskit[visualization]>=1.0.0",
]
test = [
  "pytest>=9.0.1",
  "pytest-cov>=7.0.0",
  "pytest-sugar>=1.1.1",
  "pytest-xdist>=3.8.0",
  "numpy>=2.1; python_version >= '3.13'",
  "numpy>=2.3.2; python_version >= '3.14'",
]
dev = [
  {include-group = "build"},
  {include-group = "test"},
  "nox>=2025.11.12",
  "ty==0.0.14",
]
